--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
   <div class="noise"></div>
   <div class="app">
-    <div class="note" aria-label="Controls hint">
-      Controls: press “Shake”, drag/tilt the globe, tweak Calm↔Chaos slider, Reset to settle. On mobile, gently shake your device if motion is allowed.
-    </div>
     <div class="menu-dock" id="menuDock">
       <nav class="menu">
         <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open"/>
@@ -21,7 +18,6 @@
           <span class="hamburger hamburger-3"></span>
         </label>
         
-        <button class="menu-item" data-action="shake" aria-label="Shake">✨</button>
         <button class="menu-item" data-action="reset" aria-label="Reset">↺</button>
         <button class="menu-item" data-action="panel" aria-label="Settings">⚙️</button>
         <button class="menu-item" data-action="sound" aria-label="Sound toggle">🔔</button>
@@ -91,8 +87,9 @@
       <div class="shadow"></div>
       <div class="base"></div>
     </div>
-    <div class="status-pill" id="status" role="status">Calm</div>
-    <div class="ticker" id="ticker">Breathing easy.</div>
+    <div class="note" aria-label="Controls hint">
+      Bấm dô cục đó hay lắc điện thoại i.
+    </div>
   </div>
 
   <script src="main.js"></script>
